--- a/frontend/vueproject/package.json
+++ b/frontend/vueproject/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.1",
     "vue": "^2.6.12",
     "vue-burger-menu": "^2.0.5",
+    "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.0.1",
     "vue-simple-alert": "^1.1.1",
     "vuex": "^3.6.0"
